Bug 1254730 - ChannelEventQueue must be thread-safe, r=michal